--- a/FunctionApp2.csproj
+++ b/FunctionApp2.csproj
@@ -28,4 +28,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\**\*.html" />
+  </ItemGroup>
 </Project>
